--- a/frontend/src/assets/styles/components/layout/navbar.css
+++ b/frontend/src/assets/styles/components/layout/navbar.css
@@ -100,4 +100,12 @@
 
 .hide-scrollbar::-webkit-scrollbar {
   display: none;             /* Chrome, Safari y Opera */
+}
+
+.navbar {
+  position: sticky;
+  top: 0;
+  backdrop-filter: blur(10px);
+  transition: all 0.3s ease;
+  z-index: 20;
 } 
